--- a/src/assets/scss/setting/_mixin.scss
+++ b/src/assets/scss/setting/_mixin.scss
@@ -5,7 +5,16 @@
     text-overflow: ellipsis;
 }
 
-//두줄 이상
+
+//두줄이상
+@mixin line-two{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
 @mixin line($num){
     overflow: hidden;
     text-overflow: ellipsis;
